# rust-urbandict

./: Cargo.toml
examples/: test.rs
src/: lib.rs
