[package]
name = "urbandict"
version = "0.2.0"
description = "Urban Dictionary API client in Rust."
license = "MIT"
keywords = ["urban", "dictionary", "urbandictionary", "api", "define"]
categories = ["api-bindings"]
repository = "https://github.com/gkbrk/rust-urbandict"
authors = ["Gökberk Yaltıraklı <webdosusb@gmail.com>"]

[dependencies]
reqwest = "0.4"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
